--- a/src/app/components/user/usertemplate/usereventtemplate/usereventform/usereventform.component.html
+++ b/src/app/components/user/usertemplate/usereventtemplate/usereventform/usereventform.component.html
@@ -32,6 +32,6 @@
     <!-- </ngForm> -->
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-outline-dark" (click)="c('Save click')">Save</button>
+    <button type="button" class="btn btn-outline-dark">Save</button>
   </div>
 <!-- </ng-template> -->
