--- a/src/app/components/user/usertemplate/userofficetemplate/userofficetemplate.component.html
+++ b/src/app/components/user/usertemplate/userofficetemplate/userofficetemplate.component.html
@@ -1,5 +1,5 @@
 
-<form [formGroup]="officesTemplateForm">
+<form>
   <!-- Add new Office -->
   <a *ngIf="inEditMode" href="javascript:void(0);" class="lg-fa float-right" (click)="open(content, '')"> 
       <i class="fa fa-plus"></i>
