--- a/src/app/components/user/usertemplate/userroletemplate/userroletemplate.component.html
+++ b/src/app/components/user/usertemplate/userroletemplate/userroletemplate.component.html
@@ -49,7 +49,7 @@
 -->
 
 
-<form [formGroup]="rolesTemplateForm">
+<form>
     <!-- Add new role -->
     <a *ngIf="inEditMode" href="javascript:void(0);" class="lg-fa float-right" (click)="open(content, '')"> 
         <i class="fa fa-plus"></i>
