--- a/src/app/components/user/usertemplate/userroletemplate/userrole/userrole.component.html
+++ b/src/app/components/user/usertemplate/userroletemplate/userrole/userrole.component.html
@@ -19,9 +19,14 @@
     <div class="card-media" >
     <div class="card-media-body">
       <span  *ngFor="let displayProperty of displayProperties">
-        <span *ngIf="displayProperty.propId == 'start' && role[displayProperty.propId]" class="subtle">{{role[displayProperty.propId]}}</span>
+        <span *ngIf="displayProperty.propId == 'start' && role[displayProperty.propId]" class="subtle"><i class="fa fa-calendar"></i>{{role[displayProperty.propId]}}</span>
         <span *ngIf="displayProperty.propId == 'end' && role[displayProperty.propId]" class="subtle"> to {{role[displayProperty.propId]}}</span>
-        <span *ngIf="displayProperty.propId != 'start' && displayProperty.propId != 'end' && role[displayProperty.propId]" class="subtle date-time">{{role[displayProperty.propId]}}</span>
+        <span *ngIf="displayProperty.propId != 'start' && displayProperty.propId != 'end' && role[displayProperty.propId]" class="subtle date-time">
+            <i class="fa fa-users" *ngIf="displayProperty.propId == 'committee' && role[displayProperty.propId]"></i>
+            <i class="fa fa-flag" *ngIf="displayProperty.propId == 'party' && role[displayProperty.propId]"></i>
+            <i class="fa fa-map" *ngIf="displayProperty.propId == 'district' && role[displayProperty.propId]"></i>
+
+             {{role[displayProperty.propId]}}</span>
       </span>
       <div class="card-media-body-supporting-bottom">
       </div>
