--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,52 @@
-<p>
-  home works!
-</p>
+<div class="row">
+  <div>
+    <p>
+      What GoPolitix is all about ???
+    </p>
+    <!--<img src="/assets/images/logo.png">   -->
+  </div>
+</div>
+
+<div class="row">
+  <div>
+    <span>
+      <i class="fa fa-map" aria-hidden="true"></i>
+        <p>
+          Explore, Connect and Engage with your Local communities, Townships, County, State and Federal legislative representatives, Bills, Political Party, Friends, Places and more.
+        </p>
+    </span>
+  </div>
+  <div>
+    <span>
+    <i class="fa fa-map" aria-hidden="true"></i>
+      <p>
+        Post, Comment and get informed about your interested body.
+      </p>
+    </span>
+  </div>  
+  <div>
+    <span>
+    <i class="fa fa-map" aria-hidden="true"></i>
+      <p>
+        Create Page of your interest, Invite people to engage, and Popularize your interest. You can also keep your private closed groups.
+      </p>
+    </span>
+  </div>
+  <div>
+    <span>
+    <i class="fa fa-map" aria-hidden="true"></i>
+      <p>
+        It’s a place to better understand your environment.
+      </p>
+    </span>
+  </div>
+
+</div>
+
+<div class="row">
+  <div>
+    <button class="btn btn-outline-info my-2 my-sm-0" type="submit" (click)="getIn()">So, Jump in...
+    </button>
+  </div>
+</div>
+
