--- a/src/app/components/user/user/user3.component.html
+++ b/src/app/components/user/user/user3.component.html
@@ -435,7 +435,7 @@
 
                                               <div class="row">
                                                 <div class="managedby-user-list col-lg-4 col-md-3 col-sm-6 col-xs-12 card-body legislator-box-shadow" *ngFor="let managed of managedBy">
-                                                  <app-usercard2 [username]="managed"></app-usercard2>
+                                                  <app-usercard2 [username]="managed.username"></app-usercard2>
                                                   <div class="overlay"><button class="delete-managedby-user" type="button" (click)="removeMember(managed.username)"> <i class="fa fa-trash-o" aria-hidden="true"></i></button></div>
 
                                                 </div>
