--- a/src/app/components/user/usertemplate/userroletemplate/userrole/userrole.component.css
+++ b/src/app/components/user/usertemplate/userroletemplate/userrole/userrole.component.css
@@ -3,7 +3,9 @@
     text-align: left;
   }
   .lg-fa{
-    font-size: 36px;
+    font-size: 20px;
+    position: absolute;
+    right: 0;
   }
   .box-shadow{
     transition: 10ms;
