--- a/src/app/components/user/usercard2/usercard2.component.html
+++ b/src/app/components/user/usercard2/usercard2.component.html
@@ -26,7 +26,7 @@
               </div>
               <div>
                 <ul class="icon">
-                  <li><a [routerLink]="" (click)="gotoUser(user.username)" class="fa fa-eye bg-warning" title="View Profile"> View Profile </a></li>
+                  <li><a [routerLink]="" (click)="gotoUser()" class="fa fa-eye bg-warning" title="View Profile"> View Profile </a></li>
                 </ul>
               </div>
              
